optimize data transfer, andd styles